# mkctf

./: .gitignore  .mkctf.glob.yml  .mkctf.yml  LICENSE  README.md  TODO.md  install.sh  mkctf-cli.py  mkctf.py  mkctf.yml.dist  py_chall_factory.ini.dist  py_chall_factory.pref.dist  py_chall_factory.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh
config/: mkctf.yml
config/monitoring/: Dockerfile  docker-entrypoint.sh  mkctf.env  monitoring.env
config/templates/: Dockerfile.sandbox  Dockerfile.server  README.md  banner  build.jinja  dependencies.txt  deploy.jinja  description.md.jinja  healthcheck.deps  healthcheck.jinja  sandbox_start.sh.jinja  sshd_config  writeup.md.jinja
core/: challenge.py  cli.py  cli_option_parser.py  config.py  dispatcher.py  formatting.py  functions.py  hashing.py  logger.py  repository.py  utils.py  wrapper.py
core/command/: build.py  configure.py  create.py  delete.py  deploy.py  disable.py  enable.py  export.py  init.py  renew_flag.py  show.py  status.py  update.py  update_flag.py
core/object/: challenge.py  configurable.py  repository.py
mkctf/: __init__.py  api.py  cli.py  exception.py  main.py  mkctf_cli.py  mkctf_monitor.py  mkctf_serve.py  mkctf_server.py  monitor.py  web_handler.py
mkctf/api/: __init__.py  challenge.py  repository.py
mkctf/api/config/: __init__.py  _base.py  challenge.py  general.py  repository.py
mkctf/cli/: __init__.py  build.py  configure.py  create.py  delete.py  deploy.py  disable.py  enable.py  enum.py  export.py  renew_flag.py  show.py  status.py  update_meta.py
mkctf/cli/command/: __init__.py  build.py  configure.py  create.py  delete.py  (+11 more)
mkctf/command/: __init__.py  build.py  configure.py  create.py  delete.py  deploy.py  disable.py  enable.py  enum.py  export.py  healthcheck.py  init.py  push.py  renew_flag.py  show.py  status.py  update_meta.py
mkctf/core/: cli.py  config.py  hashing.py  logger.py  wrapper.py
mkctf/helper/: __init__.py  argparse.py  argument_parser.py  checksum.py  cli.py  config.py  display.py  exception.py  formatting.py  fs.py  hashing.py  log.py  logger.py  logging.py  random.py  signal.py  subprocess.py  win.py  wrapper.py
mkctf/model/: __init__.py  challenge.py  repository.py
mkctf/monitoring/: __init__.py  monitor.py  notifier.py  task.py
mkctf/object/: __init__.py  challenge.py  configurable.py  repository.py
mkctf/wizard/: __init__.py  _base.py  challenge.py  repository.py
script/: mkctf-cli
scripts/: install.sh
(+20 files in other folders)
