[metadata]
url = https://github.com/koromodako/mkctf
author = koromodako
author_email = koromodako@gmail.com
name = mkctf
description = MaKe Capture The Flag
long_description = file: README.md, LICENSE
keywords = ctf, framework, cli
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    pick<3.0.0
    rich<14.0.0
    jinja2<4.0.0
    aiohttp<4.0.0
    humanize<5.0.0
    ruamel.yaml<0.18.0
    python-slugify<9.0.0

[options.entry_points]
console_scripts =
    mkctf-cli = mkctf.cli:app
    mkctf-monitor = mkctf.monitor:app
